syntax = "proto3";

import "user.proto";
import "google/protobuf/timestamp.proto";

package pb;

option go_package = "github.com/kwalter26/udemy-simplebank/pb";

message LoginUserRequest {
  string username = 1;
  string password = 4;
}
//
//  Create prototype for the response
//  SessionID             uuid.UUID    `json:"session_id"`
//	AccessToken           string       `json:"access_token"`
//	AccessTokenExpiresAt  time.Time    `json:"access_token_expires_at"`
//	RefreshToken          string       `json:"refresh_token"`
//	RefreshTokenExpiresAt time.Time    `json:"refresh_token_expires_at"`
//	User                  userResponse `json:"user"`
//
message LoginUserResponse {
  User user = 1;
  string session_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp access_token_expires_at = 5;
  google.protobuf.Timestamp refresh_token_expires_at = 6;
}

