syntax = "proto3";

import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "google/api/annotations.proto";

package pb;

option go_package = "github.com/kwalter26/udemy-simplebank/pb";

service SimpleBank {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
    option (google.api.http) = {
      post: "/v1/create_user"
      body: "*"
    };
  }
  rpc Login(LoginUserRequest) returns (LoginUserResponse){
    option (google.api.http) = {
      post: "/v1/login_user"
      body: "*"
    };
  }
}